# oxihex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
apps/client-bin/: Cargo.toml
apps/client-bin/src/: main.rs
apps/server-cli/: Cargo.toml
client/: .gitignore  Cargo.toml  index.html
client/src/: main.rs
common/: Cargo.toml
common/src/: player.rs  world.rs
common/src/world/: chunk.rs  hex.rs
common/src/world/chunk/: tile.rs
common/src/world/chunk/tile/: building.rs
crates/adapters/network/: Cargo.toml
crates/adapters/storage/: Cargo.toml
crates/client/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: building.rs  lib.rs  player.rs  world.rs
crates/domain/src/world/: chunk.rs  hex.rs
crates/domain/src/world/chunk/: tile.rs
crates/domain/src/world/chunk/tile/: ore.rs
crates/net/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: .gitignore  Cargo.toml
