[package]
name = "oxihex-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy = { version = "0.18.1", features = ["webgl2"] }
common = { package = "oxihex-common", path = "../common" }
wasm-bindgen = "0.2.117"                                    #//TODO: only for target wasm32
